finalização da estrutura basica da pagina

--- a/index.html
+++ b/index.html
@@ -23,7 +23,12 @@
         </section>
          
         <!-- seção de link para redicionamento para outra pagina -->
-         
+
+        <a href="">
+            <button>fale conosco</button>
+        </a>
+
+        <!-- rodape da pagina -->
     </main>
 </body>
 </html>
