Metolhoria da seção sobre da tela inicial e estilização da mesma

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>ONGlink</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='./css/main.css'>
     <script src='main.js'></script>
 </head>
 <body>
@@ -35,9 +35,11 @@
          
         <!-- seção de link para redicionamento para outra pagina -->
 
-        <a href="./cadastro.html">
-            <button>fale conosco</button>
-        </a>
+        <div id="botao">            
+            <a href="./cadastro.html">
+                <button id="faleConosco">fale conosco</button>
+            </a>
+        </div>
 
         <!-- rodape da pagina -->
             
